--- a/src/app/components/articles/session-audio/session-audio.component.html
+++ b/src/app/components/articles/session-audio/session-audio.component.html
@@ -31,7 +31,7 @@
             <vm-player
             theme="dark"
             style="--vm-player-theme: var(--primary);"
-            class="w-100"
+            class="w-100 px-0"
             #vimePlayer>
                 <vm-audio cross-origin>
                     <source 
