--- a/src/app/components/utility/diary-entry-encounter/diary-entry-encounter.component.html
+++ b/src/app/components/utility/diary-entry-encounter/diary-entry-encounter.component.html
@@ -127,7 +127,7 @@
               <ng-container *ngIf="inEncounterConnectionCreationState">
                 <form class="d-flex align-items-center" (submit)="createEncounterConnection(cardData)">
                   <select
-                  class="form-control"
+                  class="form-select"
                   name="character"
                   id="character"
                   [(ngModel)]="baseEncounterConnection.character">
