--- a/src/app/components/utility/spell/spell.component.html
+++ b/src/app/components/utility/spell/spell.component.html
@@ -141,17 +141,17 @@
         </div>
       </ng-container>
 
-      <ng-container *ngIf="!this.isInCreateState()">
+      <ng-container *ngIf="!this.isInCreateState() && !this.isInUpdateState()">
         <!-- You cannot add classes to a spell that does not yet exist -->
         <div>
-          Classes:
+          <span class="me-2"> Classes: </span>
           <ng-container *ngFor="let connection of cardData.player_class_connections">
-            <span class="badge bg-secondary badge-lg p-2 me-3 pointer"
+            <span class="badge bg-secondary badge-lg p-2 me-2 pointer"
             (click)="emitClassSelectEvent($event, connection.player_class_details.name)">
               {{ connection.player_class_details.name }}
   
               <ng-container *ngIf="tokenService.isAdmin()">
-                <span class="fa fa-trash ms-2"
+                <span class="fa fa-trash"
                 (click)="deleteSpellPlayerClassConnection(connection)"
                 ></span>
               </ng-container>
@@ -160,7 +160,6 @@
   
   
           <ng-container *ngIf="tokenService.isAdmin()">
-            <ng-container ></ng-container>
             <app-inline-create-button
             [labelText]="'Add Class'"
             (click)="toggleConnectionCreateState()"
@@ -172,6 +171,7 @@
 
 
       <app-formly-formcontainer
+        class="mt-3 d-block"
         *ngIf="isInCreateState() || isInUpdateState()"
         [model]="userModel"
         [fields]="formlyFields"
@@ -209,7 +209,7 @@
     class="d-inline-flex align-items-center"
     (submit)="createSpellPlayerClassConnection(connectionModel)"
   >
-    <select class="form-control d-inline-block"
+    <select class="form-select d-inline-block"
     name="connection"
     id="connection"
     [(ngModel)]="connectionModel.player_class">
