Fix spinner positioning

--- a/src/app/components/articles/campaign-overview/campaign-overview.component.html
+++ b/src/app/components/articles/campaign-overview/campaign-overview.component.html
@@ -37,7 +37,7 @@
     </h3>
   </div>
   <div class="row flex-1 mx-0" id="campaign-overview-body">
-    <ng-container *ngIf="campaignData != null; else campaignLoadingBody">
+    <ng-container *ngIf="campaignData != null">
       <ng-container *ngIf="campaignData?.length > 0; else noCampaign">
         <ng-container *ngFor="let campaign of campaignData">
           <a class="px-0 campaign pointer"
@@ -76,8 +76,4 @@
 
 <ng-template #noCampaignHeading>
     No Campaign available!
-</ng-template>
-
-<ng-template #campaignLoadingBody>
-  <app-spinner class="m-auto"></app-spinner>
 </ng-template>
