--- a/src/app/components/utility/recently-updated-articles-list/recently-updated-articles-list.component.html
+++ b/src/app/components/utility/recently-updated-articles-list/recently-updated-articles-list.component.html
@@ -1,10 +1,7 @@
 <div class="container" id="news">
     <!-- List Heading -->
     <h3 class="row justify-content-center align-items-center">
-        <span class="">Recent Updates</span>
-        <ng-container *ngIf="!articles">
-            <app-spinner class="ms-3"></app-spinner>
-        </ng-container>
+        Recent Updates
     </h3>
 
     <div class="row">
@@ -54,7 +51,7 @@
     
 </div>
 
-<ng-container *ngIf="true">
+<ng-container *ngIf="isLoadingNextPage">
     <div class="w-100 d-flex justify-content-center">
         <app-spinner></app-spinner> 
     </div>
